fix: edit node button overflowing

--- a/erpnext/public/scss/hierarchy_chart.scss
+++ b/erpnext/public/scss/hierarchy_chart.scss
@@ -57,6 +57,7 @@
 		font-size: .75rem;
 		justify-content: center;
 		box-shadow: var(--shadow-sm);
+		margin-left: auto;
 	}
 
 	.edit-chart-node {
@@ -79,6 +80,7 @@
 		align-items: center;
 		justify-content: space-between;
 		margin-bottom: 2px;
+		width: 12.2rem;
 	}
 }
 
